# Comau-ROS-Jetson

comau-experimental/comau_action_handlers/: CMakeLists.txt  README.md  package.xml
comau-experimental/comau_action_handlers/doc/: comau_action_handlers_diagram.md
comau-experimental/comau_action_handlers/include/comau_handlers/: execute_cartesian_trajectory_handler.h  execute_joint_trajectory_handler.h
comau-experimental/comau_action_handlers/include/moveit_handlers/: comau_perception_action_server.h  comau_plan_action_server.h
comau-experimental/comau_action_handlers/launch/: main_comau_plan_action_handlers.launch
comau-experimental/comau_action_handlers/launch/include/: comau_perception_action_handler.launch  comau_plan_action_handler.launch  execute_cartesian_trajectory_handler.launch  execute_joint_trajectory_handler.launch
comau-experimental/comau_action_handlers/scripts/: plot.py
comau-experimental/comau_action_handlers/src/: comau_perception_action_client.cpp  comau_perception_action_server_node.cpp  comau_plan_action_client.cpp  comau_plan_action_server_node.cpp  execute_cartesian_trajectory_handler_node.cpp  execute_joint_trajectory_handler_node.cpp
comau-experimental/comau_action_handlers/src/comau_handlers/: execute_cartesian_trajectory_handler.cpp  execute_joint_trajectory_handler.cpp
comau-experimental/comau_action_handlers/src/moveit_handlers/: comau_perception_action_server.cpp  comau_plan_action_server.cpp
comau-experimental/comau_bringup/: CMakeLists.txt  package.xml
comau-experimental/comau_bringup/config/: parallel_joint_fix.yaml
comau-experimental/comau_bringup/config/net/: aura_net_config.yaml  racer7_net_config.yaml  racerx_net_config.yaml  roboshop_net_config.yaml
comau-experimental/comau_bringup/config/transforms/: use_dual_arm.yaml
comau-experimental/comau_bringup/launch/: aura-mimic_bringup.launch  aura_bringup.launch
comau-experimental/comau_bringup/launch/common/: comau_common.launch  comau_control.launch
comau-experimental/comau_bringup/launch/robots/: aura-mimic_bringup.launch  aura_bringup.launch  nj220_bringup.launch  nj4-110_bringup.launch  nj4-170-29_bringup.launch  racer5-0-80_bringup.launch  racer5-cobot_bringup.launch  racer7-14_bringup.launch
comau-experimental/comau_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
comau-experimental/comau_controllers/include/comau_controllers/: sensor_tracking_controller.h
comau-experimental/comau_controllers/scripts/: arm_teleop
comau-experimental/comau_controllers/src/comau_controllers/: sensor_tracking_controller.cpp
comau-experimental/comau_description/racer5-0-80_description/: CMakeLists.txt  package.xml
comau-experimental/comau_description/racer5-0-80_description/config/: dummy_gripper.yaml  gripper.yaml  gripper_test.yaml  piastra.yaml  screwdriver.yaml  tool_test_on_real.yaml  welder.yaml  welding_torch.yaml
comau-experimental/comau_description/racer5-0-80_description/launch/: racer5-0-80_upload.launch  racer5-0-80_upload_1.launch
comau-experimental/comau_description/racer5-0-80_description/robots/: racer5-0-80_robot.urdf.xacro
comau-experimental/comau_description/racer5-0-80_description/script/: racer5-0-80_upload.py
comau-experimental/comau_driver/: CMakeLists.txt  README.md  package.xml
comau-experimental/comau_driver/config/: controllers.yaml  racer7_net_config.yaml  roboshop_net_config.yaml
comau-experimental/comau_driver/doc/: COPYREADME.md  comau_driver_diagram.md
comau-experimental/comau_driver/launch/: comau_common.launch  comau_control.launch
comau-experimental/comau_driver/src/: comau_hardware_interface_node.cpp  comau_hw_interface_node.cpp  switch_controllers_client.cpp
comau-experimental/comau_driver/src/comau_driver/: comau_driver.cpp
comau-experimental/comau_experimental/: CMakeLists.txt  README.md  package.xml
comau-experimental/comau_gripper_handler/: CMakeLists.txt  README.md  package.xml
comau-experimental/comau_gripper_handler/config/: gripper_handler.yaml
comau-experimental/comau_gripper_handler/launch/: comau_gripper_handler.launch
comau-experimental/comau_gripper_handler/nodes/: comau_gripper_handler_node.cpp
comau-experimental/comau_gripper_handler/src/: comau_gripper_handler.cpp
comau-experimental/comau_moveit_config/comau_moveit_config/: CMakeLists.txt  package.xml
comau-experimental/comau_moveit_interface/: CMakeLists.txt  package.xml
comau-experimental/comau_msgs/: CMakeLists.txt  package.xml
comau-experimental/comau_msgs/action/: ExecuteCartesianTrajectory.action  ExecuteJointTrajectory.action  MoveToJointsMoveIt.action  MoveToPoseMoveIt.action  Perception.action
comau-experimental/comau_msgs/msg/: ActionFeedback.msg  ActionRequest.msg  ActionResult.msg  ActionResultStatusConstants.msg  CartesianPose.msg  CartesianPoseStamped.msg  ComauRobotStatus.msg  PropertyValuePair.msg  SnsTrkPlot.msg
comau-experimental/comau_msgs/srv/: AddObject.srv  GripperCommand.srv  SnsTrkPlotReset.srv
comau-experimental/comau_tcp_interface/: CMakeLists.txt  README.md  comau_tcp_client_plugins.xml  package.xml
comau-experimental/comau_tcp_interface/launch/: comau_motion_client.launch  comau_state_client.launch  ms_comau_motion_client.launch  ms_comau_state_client.launch
comau-experimental/comau_tcp_interface/src/: comau_motion_client_node.cpp  comau_state_client_node.cpp
comau-experimental/comau_tools/: CMakeLists.txt  package.xml
comau-experimental/comau_tools/cfg/: SnsTrkPlot.cfg
comau-experimental/comau_tools/launch/: multi_plot.launch  twist_pub.launch
comau-experimental/comau_tools/rqt_config/: rqt_multiplot_pitch.xml
comau-experimental/comau_tools/src/: twist_sin_pub.cpp
comau-experimental/comau_viz/: CMakeLists.txt  package.xml
comau-experimental/comau_viz/launch/: rviz.launch  view_aura-mimic.launch  view_aura.launch  view_dual_arm_rlm.launch  view_nj220.launch  view_nj4-110.launch  view_nj4-170-29.launch  view_racer5-0-80.launch  view_racer5-cobot.launch  view_racer7-14.launch
comau-experimental/comau_viz/rviz/: aura_double.rviz  moveit.rviz  view_robot.rviz
(+351 files in other folders)
