<?xml version="1.0"?>
<package format="2">
  <name>comau_action_handlers</name>
  <version>0.0.0</version>
  <description>The comau_action_handlers package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>comau_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  
  <export>

  </export>
</package>
