<?xml version="1.0"?>
<package format="2">
  <name>comau_bringup</name>
  <version>0.1.0</version>
  <description>The comau_bringup package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>comau_driver</depend>
  
  <!-- <exec_depend>aura_description</exec_depend>
  <exec_depend>nj4-110_description</exec_depend>
  <exec_depend>nj4-170-29_description</exec_depend>
  <exec_depend>nj220_description</exec_depend> -->
  <exec_depend>racer5-0-80_description</exec_depend>
  <!-- <exec_depend>racer5-cobot_description</exec_depend>
  <exec_depend>racer7-14_description</exec_depend> -->

  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>
