<?xml version="1.0"?>
<package format="2">
  <name>comau_controllers</name>
  <version>0.0.0</version>
  <description>The comau_controllers package</description>

  <maintainer email="makeme@todo.todo">makeme</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!--depend>eigen</depend>
  <depend>eigen_conversions</depend-->
  <!-- <depend>kdl</depend> -->
  <depend>kdl_parser</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>

  <depend>hardware_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>comau_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
