<?xml version="1.0"?>
<package format="2">
  <name>comau_driver</name>
  <version>0.1.0</version>
  <description>The comau_driver package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>boost</build_depend>
  

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>joint_limits_interface</depend>
  <depend>comau_tcp_interface</depend>
  <depend>tf2_ros</depend>
  <depend>comau_controllers</depend>
  <depend>industrial_robot_status_interface</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>kdl_parser</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>comau_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <doc_depend>doxygen</doc_depend>

  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>
