<?xml version="1.0"?>
<package format="2">
  <name>comau_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for COMAU Robots</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>comau_action_handlers</exec_depend>
  <exec_depend>comau_bringup</exec_depend>
  <exec_depend>comau_description</exec_depend>
  <exec_depend>comau_driver</exec_depend>
  <exec_depend>comau_moveit_config</exec_depend>
  <exec_depend>comau_moveit_interface</exec_depend>
  <exec_depend>comau_msgs</exec_depend>
  <!-- <exec_depend>comau_sim</exec_depend> -->
  <exec_depend>comau_tcp_interface</exec_depend>
  <exec_depend>comau_viz</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>
