<?xml version="1.0"?>
<package format="2">
  <name>comau_gripper_handler</name>
  <version>0.0.0</version>
  <description>The comau_gripper_handler package</description>
  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>comau_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>pluginlib</depend>
  <depend>comau_tcp_interface</depend>

  <export>
  </export>
</package>