<?xml version="1.0"?>
<package format="2">
  <name>comau_msgs</name>
  <version>0.1.0</version>
  <description>The comau_msgs package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
