<?xml version="1.0"?>
<package format="2">
  <name>comau_viz</name>
  <version>0.0.0</version>
  <description>The comau_viz package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
  </export>

</package>
